updated package json

--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,7 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "prebuild": "node ../scripts/copy-data.js"
+    "prebuild": "cd .. && npm run build --workspace=shared && npm run copy-data"
   },
   "dependencies": {
     "react": "^18.2.0",
