updated vercel json

--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,7 @@
   "outputDirectory": "client/dist",
   "installCommand": "npm install",
   "framework": "vite",
+  "rootDirectory": ".",
   "rewrites": [
     {
       "source": "/(.*)",
