--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,7 @@
   "buildCommand": "npm run build",
   "outputDirectory": "client/dist",
   "installCommand": "npm install",
+  "rootDirectory": ".",
   "rewrites": [
     {
       "source": "/(.*)",
