--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@idle-rpg/server",
   "version": "1.0.0",
-  "description": "Backend server for Idle RPG",
+  "description": "Backend server for Tales of Heroes, Legends & Beasts",
   "main": "./dist/server.js",
   "type": "module",
   "scripts": {
