--- a/shared/package.json
+++ b/shared/package.json
@@ -2,6 +2,7 @@
   "name": "@idle-rpg/shared",
   "version": "1.0.0",
   "description": "Shared types and utilities for Tales of Heroes, Legends & Beasts",
+  "type": "module",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
