--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     name: idle-rpg-server-staging
     env: node
     region: oregon
-    plan: starter
+    plan: free
     buildCommand: npm install && npm run build --workspace=shared && npm run build --workspace=server
     startCommand: npm start --workspace=server
     healthCheckPath: /health
@@ -43,7 +43,7 @@ services:
     name: idle-rpg-server-production
     env: node
     region: oregon
-    plan: starter
+    plan: free
     buildCommand: npm install && npm run build --workspace=shared && npm run build --workspace=server
     startCommand: npm start --workspace=server
     healthCheckPath: /health
@@ -83,12 +83,12 @@ databases:
   - name: idle-rpg-db-staging
     databaseName: idle_rpg_staging
     user: idle_rpg_staging_user
-    plan: starter
+    plan: free
     region: oregon
 
   # Production Database
   - name: idle-rpg-db-production
     databaseName: idle_rpg_production
     user: idle_rpg_production_user
-    plan: starter
+    plan: free
     region: oregon
